# remote-svc-ctrl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: polkit.md  pvs.md  ssh-setup.md
op/: service_ctrl.bob
src/remote_svc_ctrl/: __init__.py  ioc.py  systemd.py
tests/: conftest.py  test_ioc.py  test_ioc_integration.py  test_systemd.py
